# course_work2

./: mypy.ini  pyproject.toml  requirements.txt
